# eclipse-autoapiframework-application-framework

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md  Rakefile
SwLibraries/vaf_core_library/lib/: CMakeLists.txt
SwLibraries/vaf_core_library/lib/include/tl/: expected.h
SwLibraries/vaf_core_library/lib/include/vaf/: controller_interface.h  data_ptr.h  error_domain.h  executable_controller_base.h  executable_controller_interface.h  executor.h  future.h  logging.h  module_states.h  receiver_handler_container.h  result.h  runtime.h  user_controller_interface.h
SwLibraries/vaf_core_library/lib/include/vaf/internal/: data_ptr_helper.h
SwLibraries/vaf_core_library/lib/src/: controller_interface.cpp  executable_controller_base.cpp  executor.cpp  logging.cpp  runtime.cpp
VAF/: .gitignore  Makefile  README.md  pyproject.toml
VAF/bootstrap/: LICENSE  pyproject.toml
VAF/python3-makefile/: Makefile  ruff.toml
VAF/src/vaf/: __init__.py  __main__.py  __main_bootstrap__.py  constants.py
VAF/src/vaf/cli_core/bootstrap/: project_init_cmd.py  workspace_cmd.py
VAF/src/vaf/cli_core/bootstrap/cli_subcommands/: project_subcmd.py  workspace_subcmd.py
VAF/src/vaf/cli_core/common/: click_extension.py  click_help.py  exceptions.py  utils.py
VAF/src/vaf/cli_core/main/: make_cmd.py  model_cmd.py  project_cmd.py
VAF/src/vaf/cli_core/main/cli_subcommands/: make_subcmd.py  model_subcmd.py  project_subcmd.py
VAF/src/vaf/vafgeneration/: __init__.py  generation.py  vaf_application_communication.py  vaf_application_module.py  vaf_cac_support.py  vaf_cmake_common.py  vaf_conan.py  vaf_controller.py  vaf_generate_application_module.py  vaf_generate_common.py  vaf_generate_project.py  vaf_interface.py  vaf_protobuf_serdes.py  vaf_silkit.py  vaf_std_data_types.py
VAF/src/vaf/vafgeneration/templates/common/: cmake_copyright.jinja  cmake_interface_library.jinja  cmake_library.jinja  cmake_subdirs.jinja  copyright.jinja  cpp_file_base.jinja  h_file_base.jinja
VAF/src/vaf/vafgeneration/templates/vaf_application_communication/: application_communication_module_cpp.jinja  application_communication_module_h.jinja
VAF/src/vaf/vafgeneration/templates/vaf_application_module/: base_cpp.jinja  base_h.jinja  cmake_implementation.jinja  module_cpp.jinja  module_h.jinja  test_base_cpp.jinja  test_base_h.jinja  test_cmake.jinja  test_main_cpp.jinja  test_module_cpp.jinja
VAF/src/vaf/vafgeneration/templates/vaf_cac_support/: platform.py.jinja
VAF/src/vaf/vafgeneration/templates/vaf_cmake_common/: data_types_cmake.jinja
VAF/src/vaf/vafgeneration/templates/vaf_conan/: conan_deps.list.jinja
VAF/src/vaf/vafgeneration/templates/vaf_controller/: CMakeLists_txt.jinja  executable_controller_cpp.jinja  executable_controller_h.jinja  main_cpp.jinja  user_controller_CMakeLists_txt.jinja  user_controller_cpp.jinja  user_controller_h.jinja
VAF/src/vaf/vafgeneration/templates/vaf_interface/: macros.jinja  macros_mocks.jinja  module_interface_consumer_h.jinja  module_interface_consumer_mock_h.jinja  module_interface_provider_h.jinja  module_interface_provider_mock_h.jinja  operation_output.jinja
VAF/src/vaf/vafgeneration/templates/vaf_protobuf/: basetypes_proto.jinja  data_type_proto.jinja  data_type_transformer.jinja  interface_proto.jinja  interface_transformer.jinja  protobuf_cmake.jinja
VAF/src/vaf/vafgeneration/templates/vaf_silkit/: consumer_module_cpp.jinja  consumer_module_h.jinja  module_cmake.jinja  provider_module_cpp.jinja  provider_module_h.jinja
VAF/src/vaf/vafgeneration/templates/vaf_std_data_types/: array_h.jinja  enum_h.jinja  map_h.jinja  string_h.jinja  struct_h.jinja  type_ref_h.jinja  vector_h.jinja
VAF/src/vaf/vafmodel/: __init__.py  vafmodel.py
VAF/src/vaf/vafpy/: __init__.py  core.py  datatypes.py  elements.py  executable.py  factory.py  model_runtime.py  runtime.py  task.py  validator.py
VAF/src/vaf/vafvssimport/: vss_import.py
VAF/src/vaf/vafvssimport/vss/: vss_model.py  vss_types.py
VAF/tests/: Makefile  conftest.py
VAF/tests/ModelValidation/: .schema-infos.json  test_schema_release_version.py  test_validate_to_vaf_schema.py
VAF/tests/component/cli/: test_main.py
VAF/tests/unit/cli_core/: test_make_cmd.py  test_model_cmd.py  test_project_cmd.py
VAF/tests/unit/cli_core/test_data/: minimal_vss.json
VAF/tests/unit/cli_core/test_data/ftaf_460/: goal-model.json  interfaces.py  (+1 more)
VAF/tests/unit/vafgeneration/: test_application_communication.py  test_application_module.py  test_cac_support.py  test_cmake_common.py  test_controller.py  test_generation.py  test_merge_after_regeneration.py  test_protobuf.py  test_silkit.py  test_vafinterface.py  test_vafproject.py  test_vss.py
VAF/tests/unit/vafgeneration/application_communication/: CMakeLists.txt  my_service_module.cpp  my_service_module.h
VAF/tests/unit/vafgeneration/application_module/: app.cpp  app.h  app_cmake.txt  apps_cmake.txt  base.cpp  base.h  base_cmake.txt  main.cpp  test_base.cpp  test_base.h  test_cmake.txt  tests.cpp
VAF/tests/unit/vafgeneration/cac_support/: silkit.py.example
VAF/tests/unit/vafgeneration/cmake_common/: cmake.txt  exe_cmake.txt  libs_cmake_append2.txt
VAF/tests/unit/vafgeneration/controller/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  user_controller.cpp  user_controller.h
VAF/tests/unit/vafgeneration/input_model_examples/: silkit.json
VAF/tests/unit/vafgeneration/interface/: test1_consumer_expected.h  test1_consumer_mock_expected.h  test1_provider_expected.h  test1_provider_mock_expected.h
VAF/tests/unit/vafgeneration/protobuf/: protobuf_test.proto  protobuf_test2.proto
VAF/tests/unit/vafgeneration/silkit/: my_consumer_module.cpp  my_consumer_module.h  my_provider_module.cpp  my_provider_module.h
VAF/tests/unit/vafgeneration/vss/: seat_vss.json
VAF/tests/unit/vafmodel/: test_example.py  test_model.json  test_model2.json
VAF/tests/unit/vafpy/: test_cac.py  test_example.py
VAF/tests/unit/vafvssimport/: test_export_arrays.py  test_export_enum.py  test_export_min_max.py  test_export_struct.py  test_vss_import.py
(+186 files in other folders)
