[project]
name = "vaf-bootstrap"
dynamic = ["version"]
description = "Commandline tool for bootstrapping projects in the Vehicle Application Framework (VAF)"
readme = "README.md"
keywords = ["python", "module"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

authors = [{ name = "Christian Marchl", email = "christian.marchl@vector.com" }]
license = { file = "LICENSE" }

dependencies = [
    "click>=8.1.7",
    "copier>=9.3.1",
    "jinja2>=3.1.4",
    "click-prompt==0.6.1",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://vgroup.sharepoint.com/sites/pes_ft_application_framework/SitePages/Home.aspx"
Repository = "https://gitlab.vi.vector.int/pes/teamprojects/pes-ft-applicationframework"
Documentation = "<spo url>"
Changelog = "<source url>"

[project.scripts]
vaf = "vaf.__main_bootstrap__:cli"

[build-system]
requires = ["pdm-backend==2.3.3", "pdm-build-locked==0.3.2"]
build-backend = "pdm.backend"


#########
# TOOLS #
#########

[tool.pdm.version]
source = "scm"
fallback_version = "0.1.0"

[tool.pdm]
plugins = ["pdm-build-locked"]

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/vaf/cli_core/bootstrap/",
    "src/vaf/cli_core/common/",
    "src/vaf/__main_bootstrap__.py",
    "src/vaf/py.typed",
    "src/vaf/constants.py",
]
